<?xml version="1.0"?>
<package format="1">

  <name>realsense_ros2_gazebo</name>
  <version>1.0.0</version>

  <description>Gazebo plugin for Intel RealSense cameras.</description>

  <license>GNU GPL v3.0</license>

  <maintainer email="isl.torvergata@gmail.com">Intelligent Systems La</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>

  <exec_depend>gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--TODO Must be added!-->
    <realsense_gazebo_plugin plugin="${prefix}/realsense_gazebo_plugin.xml"/>
  </export>
</package>
